--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,10 +1,10 @@
 {
   "codeLens.enable": false,
-  "diagnostic.errorSign": "",
-  "diagnostic.warningSign": "",
-  "diagnostic.infoSign": "",
-  "diagnostic.enableMessage": "jump",
-  "diagnostic.virtualText": true,
+  "diagnostic.errorSign": "",
+  "diagnostic.warningSign": "",
+  "diagnostic.infoSign": "",
+  "diagnostic.enableMessage": "always",
+  "diagnostic.virtualText": false,
   "diagnostic.virtualTextCurrentLineOnly": false,
   "suggest.completionItemKindLabels": {
     "keyword":  "\uf1de", //  sliders
