[ADD] tmux-keybildings / [FIX] Color theme

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,19 @@
 set -sg escape-time 0
+set -g base-index 1
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-terminal "screen-256color"
 
-
+### Pane movement
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+# ### Pane resize
+bind-key H resize-pane -L
+bind-key J resize-pane -D
+bind-key K resize-pane -U
+bind-key L resize-pane -R
 
 # Powerline
 source ~/.tmux.powerline.conf
