--- a/.config/alacritty.yml
+++ b/.config/alacritty.yml
@@ -58,7 +58,7 @@ colors:
 
   # Bright colors
   bright:
-    black:   '0x002b36'
+    black:   '0x06596d'
     red:     '0xcb4b16'
     green:   '0x586e75'
     yellow:  '0x657b83'
@@ -72,8 +72,31 @@ shell:
   args:
     - -l
     - -c
-    - "tmux attach || tmux"
+    - "tmux attach || tmux new -s 1"
 
 key_bindings:
-  - { key: V, mods: Command, action: Paste }
-  - { key: C, mods: Command|Shift, action: Copy }
+  - { key: V,     mods: Command,       action: Paste }
+  - { key: C,     mods: Command|Shift, action: Copy }
+  - { key: T,     mods: Command,       chars: "\x02\x63" }
+  - { key: W,     mods: Command,       chars: "\x02\x78" }
+  - { key: D,     mods: Command,       chars: "\x02\x25" }
+  - { key: D,     mods: Command|Shift, chars: "\x02\x22" }
+  - { key: N,     mods: Command,       chars: "\x02\x6e" }
+  - { key: P,     mods: Command,       chars: "\x02\x70" }
+  - { key: H,     mods: Shift|Command, chars: "\x02\x48" }
+  - { key: L,     mods: Shift|Command, chars: "\x02\x4c" }
+  - { key: K,     mods: Shift|Command, chars: "\x02\x5b" }
+  - { key: J,     mods: Shift|Command, chars: "\x02\x4a" }
+  - { key: H,     mods: Option,       chars: "\x02\x68" }
+  - { key: L,     mods: Option,       chars: "\x02\x6c" }
+  - { key: K,     mods: Option,       chars: "\x02\x6b" }
+  - { key: J,     mods: Option,       chars: "\x02\x6a" }
+
+
+
+
+
+
+
+
+
