--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,4 +16,6 @@ bind-key K resize-pane -U
 bind-key L resize-pane -R
 
 # Powerline
-source ~/.tmux.powerline.conf
+source ~/.tmux/themes/tokyo.conf
+
+
