--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ set -g base-index 1
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-terminal "screen-256color"
+set-window-option -g xterm-keys on
+
+
 
 ### Pane movement
 bind-key h select-pane -L
